--- a/gb/19/10/8/n11576300.md
+++ b/gb/19/10/8/n11576300.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ckuqy286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ckuqy286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ckuqy286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ckuqy286/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ckuqy286/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ckuqy286/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ckuqy286/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>对抗华为5G 美国拟资助诺基亚、爱立信</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/1905241928522384-600x400.jpg" />
 <h6>华为所带来的国安威胁已受到美国政府的重视。（陈柏州／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年10月08日讯】（大纪元记者张原彰台湾台北报导）中共以国家资源扶持电信商<ahref="https://github.com/ckuqy286/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>，并以华为进行间谍行为，所带来的国安威胁已受到美国政府的重视。据英国媒体金融时报的报导，美国正打算资助欧洲的电信设备制造商<ahref="https://github.com/ckuqy286/djy/blob/master/gb/tag/%E8%AF%BA%E5%9F%BA%E4%BA%9A.md#1">诺基亚</a>?(Nokia)、爱立信 (Ericsson)?，以对抗华为在全球5G领域的扩张。</p>
-<p>据报导，一名资深的美国官员透露，美国在近10年来，放弃了在通信制造设备上的优势，而在<ahref="https://github.com/ckuqy286/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>带来的威胁下，才意识到这并非好的选择，美国正基于国家安全的考量，不断的改变目前的状况。</p>
-<p>该报导指出，两名知情人士指出，美国政府提议以资金支持<ahref="https://github.com/ckuqy286/djy/blob/master/gb/tag/%E8%AF%BA%E5%9F%BA%E4%BA%9A.md#1">诺基亚</a>与爱立信，让这些电信制造商可取得与华为相当的制造成本，增加其在市场上的竞争力。而美国政府也认为，华为正在对其盟友带来威胁，因此支持华为的竞争对手，被列入可行的一项考量里。</p>
+<p>【大纪元2019年10月08日讯】（大纪元记者张原彰台湾台北报导）中共以国家资源扶持电信商<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>，并以华为进行间谍行为，所带来的国安威胁已受到美国政府的重视。据英国媒体金融时报的报导，美国正打算资助欧洲的电信设备制造商<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AF%BA%E5%9F%BA%E4%BA%9A.md#1">诺基亚</a>?(Nokia)、爱立信 (Ericsson)?，以对抗华为在全球5G领域的扩张。</p>
+<p>据报导，一名资深的美国官员透露，美国在近10年来，放弃了在通信制造设备上的优势，而在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>带来的威胁下，才意识到这并非好的选择，美国正基于国家安全的考量，不断的改变目前的状况。</p>
+<p>该报导指出，两名知情人士指出，美国政府提议以资金支持<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AF%BA%E5%9F%BA%E4%BA%9A.md#1">诺基亚</a>与爱立信，让这些电信制造商可取得与华为相当的制造成本，增加其在市场上的竞争力。而美国政府也认为，华为正在对其盟友带来威胁，因此支持华为的竞争对手，被列入可行的一项考量里。</p>
 <p>报导表示，部分美国官员也认为，中共大肆补贴华为，让华为得以发展，而美国通过补贴华为的竞争对手，让他们可以在市场上与华为竞争，这会是削弱华为的有效方式。</p>
 <p>据全球市场调查公司Dell’Oro的数据显示，全球有28%的电信设备采用华为产品，诺基亚和爱立信则是最有机会追上华为的竞争对手。</p>
 <p>报导指出，目前没有一个大型美国企业集团，可以打造传输手机讯号的无线通讯设备，及串联这一切的网路，这样的现象已获美国政府的重视。#</p>
@@ -18,42 +18,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/19/9/26/n11549193.md#1">【直播回放】听证会：美拟立法替换华为设备</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/19/9/27/n11550259.md#1">任正非承认华为在海外融资困难</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/19/9/27/n11550823.md#1">华为将发布折叠型Mate X 缺陷仍存在</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/19/9/27/n11551310.md#1">华为发行60亿债券 任正非竟“蒙在鼓里”？</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/3/n12158168.md#1">无痕模式也被追踪！ Google挨告</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/3/n12158029.md#1">美和平抗议持续 夜晚平静</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/3/n12157896.md#1">港版国安法冲击美商 调查：6成怕经营受损</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/3/n12157653.md#1">福特警用车可加热至133度 以杀死中共病毒</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/2/n12153907.md#1">【十字路口】骚乱搅局 美中对抗会怎样？</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/2/n12155378.md#1">川普邀普亭参加G7峰会 英国加拿大反对</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/26/n11549193.md#1">【直播回放】听证会：美拟立法替换华为设备</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/27/n11550259.md#1">任正非承认华为在海外融资困难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/27/n11550823.md#1">华为将发布折叠型Mate X 缺陷仍存在</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/27/n11551310.md#1">华为发行60亿债券 任正非竟“蒙在鼓里”？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686335.md#1">俄乌协商停火 俄国防部：让平民撤离马立波</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683268.md#1">中共贸易恶行难改 戴琪：重新校准美中贸易关系</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13682154.md#1">前立陶宛驻美大使：俄乌战争效应是台湾机遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681117.md#1">乌代表遭下毒？美辟谣</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13680891.md#1">才撤出法国不久 虾皮又宣布退出印度市场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13680823.md#1">台海安全拥美日双保险 前国代：非乌克兰可比</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/9/n9823637.md#1" target="_blank">苦胆：“十月革命一声炮响”放的是空炮</a></li><li><a href="https://github.com/ckuqy286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/2/n12155025.md#1">黄秋生出现在路边坐塑胶椅 网友：也太路人了</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/2/n12154952.md#1">谭德塞转弯大赞美国 世卫私下怨中共瞒疫</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/1/n12153549.md#1">宣传照被抓包 两会武警倒看报 官媒急删</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/1/n12152933.md#1">大陆经济学者：中国奇迹是彻头彻尾的谎言</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/2/n12154445.md#1">台湾振兴三倍券怎么领 7大QA一次看</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/5/31/n12150559.md#1">成龙挺港版国安法 联署声明惊现死者名字</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/5/31/n12150886.md#1">成龙联署挺港版国安法 名单现大S本名引热议</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/1/n12153202.md#1">日本知名女星小泉今日子 签名抵制港版国安法</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/5/31/n12150765.md#1">刘诗诗产后复出 吴奇隆首谈爸爸经</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/2/n12156141.md#1">名单惊现三位已故巨星 成龙挺恶法联署数造假</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/5/31/n12149532.md#1">重庆退伍老兵游历阴曹地府 见到阎王爷</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/6/1/n12152526.md#1">轮回辗转 为何大多数人不记得前世？</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/10/3/24/n2854895.md#1">杨通幽上天下地 寻到太真女仙杨贵妃</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/5/29/n12146748.md#1">香港——孙中山革命思想的启蒙之地</a></li>
-<li><a href="https://github.com/ckuqy286/djy/blob/master/gb/20/5/24/n12133375.md#1">【历史上的瘟疫】印度近代史上的大瘟疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ckuqy286/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ckuqy286/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/8/n11576300.htm">对抗华为5G 美国拟资助诺基亚、爱立信</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/8/n11576300.htm">对抗华为5G 美国拟资助诺基亚、爱立信</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ckuqy286/djy/blob/master/gb/19/10/8/n11576300.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ckuqy286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ckuqy286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ckuqy286/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ckuqy286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckuqy286/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/8/n11576300.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
