--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839741.md#1" target="_blank">【细语人生】见证大法的神奇（8）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
